lots of tests moved from 'old way' into difftest, along with some minor bug correction

--- a/difftest/tests/app_json_mysql_hello.mustache
+++ b/difftest/tests/app_json_mysql_hello.mustache
@@ -1,2 +1,2 @@
 #! /usr/bin/env bash
-curl -s "http://localhost:9090/test/app_json_mysql_hello.mustache --data-binary {"name":"ian"} -H Content-Type:application/json"
+curl -s "http://localhost:9090/test/app_json_mysql_hello.mustache" --data-binary '{"name":"ian"}' -H 'Content-Type:application/json'
